# add_order_service

./: README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: a75187f98728_init.py
app/: app.py
app/config/: db.py
app/exception/: global_handler.py  http_exceptions.py  item_exceptions.py  order_exceptions.py
app/models/: category.py  client.py  item.py  order.py  order_item.py
app/routers/: item_router.py  order_router.py
app/schemas/: category_dtos.py  item_dtos.py  order_dtos.py
app/scripts/: create_test_client.py
app/services/: order_service.py  random_item_data_service.py
